--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,150 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="container">
+            <nav class="header__nav navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__item">
+                        <a class="navigation__link" href="#" target="_blank">Доставка</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a class="navigation__link" href="#" target="_blank">Оплата</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a class="navigation__link" href="#" target="_blank">Отзывы</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a class="navigation__link" href="#" target="_blank">Вопрос - ответ</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a class="navigation__link" href="#" target="_blank">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="header__contacts">
+                <a href="#"><img class="header__logo" src="./images/logo.svg" alt="logo"></a>
+                <div class="header__inner phone">
+                    <a class="phone__tel" href="tel:8 (812) 123-45-67">8 (812) 123-45-67</a>
+                    <button class="phone__btn btn">Обратный звонок</button>
+                </div>
+            </div>
+            <div class="header__menu menu">
+                <ul class="menu__list">
+                    <li class="menu__item">
+                        <a class="menu__link" href="#" target="_blank">Парикмахерская</a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#" target="_blank">Барбершоп</a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#" target="_blank">Маникюр</a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#" target="_blank">Педикюр</a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#" target="_blank">Массаж</a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#" target="_blank">Мебель</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <div class="wrapper">
+        <section class="banner">
+            <div class="container">
+                <div class="banner__content">
+                    <h1 class="banner__title">Супер кресло</h1>
+                    <p class="banner__text">Текст акции всегда отражает суть, а не просто
+                        болтовню, поэтому внимательнее</p>
+                    <a class="banner__link" href="#">Подробнее</a>
+                </div>
+            </div>
+        </section>
+        <section class="special">
+            <div class="container">
+                <div class="special__header">
+                    <h2 class="special__title">Специальные предложения</h2>
+                    <img class="special__icon" src="./images/truck.svg" alt="icon">
+                </div>
+                <div class="special__products">
+                    <div class="special__item product">
+                        <img class="product__img" src="./images/item_img.png" alt="product">
+                        <p class="product__description">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <span class="product__price">9 900 &#x20bd;</span>
+                        <button class="product__btn btn btn_sm">Купить</button>
+                    </div>
+                    <div class="special__item product">
+                        <img class="product__img" src="./images/item_img.png" alt="product">
+                        <p class="product__description">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <span class="product__price">9 900 &#x20bd;</span>
+                        <button class="product__btn btn btn_sm">Купить</button>
+                    </div>
+                    <div class="special__item product">
+                        <img class="product__img" src="./images/item_img.png" alt="product">
+                        <p class="product__description">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <span class="product__price">9 900 &#x20bd;</span>
+                        <button class="product__btn btn btn_sm">Купить</button>
+                    </div>
+                    <div class="special__item product">
+                        <img class="product__img" src="./images/item_img.png" alt="product">
+                        <p class="product__description">Парикмахерское кресло «Норм» гидравлическое</p>
+                        <span class="product__price">9 900 &#x20bd;</span>
+                        <button class="product__btn btn btn_sm">Купить</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="connect">
+            <div class="container">
+                <div class="connect__box connect__box_mail">
+                    <div class="connect__text">
+                        <p class="connect__subtitle">Получайте бонусы и подарки</p>
+                        <p class="connect__description">Каждый месяц разыгрываем 10 000 рублей для наших клиентов</p>
+                        <input class="connect__mail" type="email" name="mail" id="mail" placeholder="Введите e-mail">
+                    </div>
+                    <img class="connect__icon" src="./images/envelope.svg" alt="envelope">
+                </div>
+                <div class="connect__box">
+                    <div class="connect__text">
+                        <p class="connect__subtitle">Заходите к нам</p>
+                        <p class="connect__description">Более 300 магазинов
+                            по всей России</p>
+                        <a class="connect__link" href="#">Карта магазинов</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contacts">
+            <div class="container">
+                <div class="contacts__inner">
+                    <div class="contacts__social">
+                        <img class="social__icon" src="./images/youtube.svg" alt="youtube">
+                        <img class="social__icon" src="./images/vk.svg" alt="vk">
+                        <img class="social__icon" src="./images/facebook.svg" alt="facebook">
+                        <img class="social__icon" src="./images/instagram.svg" alt="instagram">
+                    </div>
+                    <a class="contacts__adresse" href="https://yandex.ru/maps/-/CCUGzStzcD" target="_blank">198555,
+                        Невский пр. 140, офис 140</a>
+                    <div class="contacts__phone phone">
+                        <a class="phone__tel" href="tel:8 (812) 123-45-67">8 (812) 123-45-67</a>
+                        <button class="phone__btn btn">Обратный звонок</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <p class="footer__info">Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</p>
+                <a class="footer__link" href="#" target="_blank">Политика конфиденциальности</a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
