--- a/src/index.html
+++ b/src/index.html
@@ -10,26 +10,26 @@
 
 <body>
     <header class="header">
+        <nav class="header__nav navigation">
+            <ul class="navigation__list">
+                <li class="navigation__item">
+                    <a class="navigation__link" href="#" target="_blank">Доставка</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="#" target="_blank">Оплата</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="#" target="_blank">Отзывы</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="#" target="_blank">Вопрос - ответ</a>
+                </li>
+                <li class="navigation__item">
+                    <a class="navigation__link" href="#" target="_blank">Контакты</a>
+                </li>
+            </ul>
+        </nav>
         <div class="container">
-            <nav class="header__nav navigation">
-                <ul class="navigation__list">
-                    <li class="navigation__item">
-                        <a class="navigation__link" href="#" target="_blank">Доставка</a>
-                    </li>
-                    <li class="navigation__item">
-                        <a class="navigation__link" href="#" target="_blank">Оплата</a>
-                    </li>
-                    <li class="navigation__item">
-                        <a class="navigation__link" href="#" target="_blank">Отзывы</a>
-                    </li>
-                    <li class="navigation__item">
-                        <a class="navigation__link" href="#" target="_blank">Вопрос - ответ</a>
-                    </li>
-                    <li class="navigation__item">
-                        <a class="navigation__link" href="#" target="_blank">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
             <div class="header__contacts">
                 <a href="#"><img class="header__logo" src="./images/logo.svg" alt="logo"></a>
                 <div class="header__inner phone">
@@ -37,28 +37,28 @@
                     <button class="phone__btn btn">Обратный звонок</button>
                 </div>
             </div>
-            <div class="header__menu menu">
-                <ul class="menu__list">
-                    <li class="menu__item">
-                        <a class="menu__link" href="#" target="_blank">Парикмахерская</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#" target="_blank">Барбершоп</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#" target="_blank">Маникюр</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#" target="_blank">Педикюр</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#" target="_blank">Массаж</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#" target="_blank">Мебель</a>
-                    </li>
-                </ul>
-            </div>
+        </div>
+        <div class="header__menu menu">
+            <ul class="menu__list">
+                <li class="menu__item">
+                    <a class="menu__link" href="#" target="_blank">Парикмахерская</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#" target="_blank">Барбершоп</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#" target="_blank">Маникюр</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#" target="_blank">Педикюр</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#" target="_blank">Массаж</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href="#" target="_blank">Мебель</a>
+                </li>
+            </ul>
         </div>
     </header>
     <div class="wrapper">
@@ -148,7 +148,8 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__inner">
-                <p class="footer__info">Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</p>
+                <p class="footer__info">Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для
+                    салонов красоты</p>
                 <a class="footer__link" href="#" target="_blank">Политика конфиденциальности</a>
             </div>
         </div>
