--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
     </header>
     <div class="wrapper">
         <section class="banner">
-            <div class="container">
+            <div class="banner__inner">
                 <div class="banner__content">
                     <h1 class="banner__title">Супер кресло</h1>
                     <p class="banner__text">Текст акции всегда отражает суть, а не просто
