section connect styles

--- a/src/index.html
+++ b/src/index.html
@@ -108,20 +108,25 @@
         </section>
         <section class="connect">
             <div class="container">
-                <div class="connect__box connect__box_mail">
-                    <div class="connect__text">
-                        <p class="connect__subtitle">Получайте бонусы и подарки</p>
-                        <p class="connect__description">Каждый месяц разыгрываем 10 000 рублей для наших клиентов</p>
-                        <input class="connect__mail" type="email" name="mail" id="mail" placeholder="Введите e-mail">
+                <div class="connect__inner">
+                    <div class="connect__box connect__box_mail">
+                        <div class="connect__text">
+                            <p class="connect__subtitle">Получайте бонусы и подарки</p>
+                            <p class="connect__description">Каждый месяц разыгрываем <br> 10 000 рублей для наших
+                                клиентов
+                            </p>
+                            <input class="connect__mail" type="email" name="mail" id="mail"
+                                placeholder="Введите e-mail">
+                        </div>
+                        <img class="connect__icon" src="./images/envelope.svg" alt="envelope">
                     </div>
-                    <img class="connect__icon" src="./images/envelope.svg" alt="envelope">
-                </div>
-                <div class="connect__box">
-                    <div class="connect__text">
-                        <p class="connect__subtitle">Заходите к нам</p>
-                        <p class="connect__description">Более 300 магазинов
-                            по всей России</p>
-                        <a class="connect__link" href="#">Карта магазинов</a>
+                    <div class="connect__box">
+                        <div class="connect__text">
+                            <p class="connect__subtitle">Заходите к нам</p>
+                            <p class="connect__description">Более 300 магазинов <br>
+                                по всей России</p>
+                            <a class="connect__link" href="#">Карта магазинов</a>
+                        </div>
                     </div>
                 </div>
             </div>
