contacts section styles

--- a/src/index.html
+++ b/src/index.html
@@ -135,10 +135,18 @@
             <div class="container">
                 <div class="contacts__inner">
                     <div class="contacts__social">
-                        <img class="contacts__icon" src="./images/youtube.svg" alt="youtube">
-                        <img class="contacts__icon" src="./images/vk.svg" alt="vk">
-                        <img class="contacts__icon" src="./images/facebook.svg" alt="facebook">
-                        <img class="contacts__icon" src="./images/instagram.svg" alt="instagram">
+                        <a class="contacts__link" href="#">
+                            <img class="contacts__icon" src="./images/youtube.svg" alt="youtube">
+                        </a>
+                        <a class="contacts__link" href="#">
+                            <img class="contacts__icon" src="./images/vk.svg" alt="vk">
+                        </a>
+                        <a class="contacts__link" href="#">
+                            <img class="contacts__icon" src="./images/facebook.svg" alt="facebook">
+                        </a>
+                        <a class="contacts__link" href="#">
+                            <img class="contacts__icon" src="./images/instagram.svg" alt="instagram">
+                        </a>
                     </div>
                     <a class="contacts__adresse" href="https://yandex.ru/maps/-/CCUGzStzcD" target="_blank">198555,
                         Невский пр. 140, офис 140</a>
