--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
             <div class="banner__inner">
                 <div class="banner__content">
                     <h1 class="banner__title">Супер кресло</h1>
-                    <p class="banner__text">Текст акции всегда отражает суть, а не просто
+                    <p class="banner__text">Текст акции всегда отражает суть, а не просто <br>
                         болтовню, поэтому внимательнее</p>
                     <a class="banner__link" href="#">Подробнее</a>
                 </div>
