--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,21 @@
             </ul>
         </div>
     </header>
+    <div class="modal">
+        <div class="modal__window">
+            <form class="modal__form">
+                <header class="modal__header">
+                    <h3 class="modal__title">Заполните, пожалуйста, форму обратной связи</h3>
+                    <div class="modal__close">&#10006;</div>
+                </header>
+                <fieldset class="modal__fieldset">
+                    <input class="modal__input" type="text" placeholder="Ваше имя" minlength="2">
+                    <input class="modal__input" type="tel" placeholder="Ваш номер телефона" minlength="5">
+                    <button class="modal__btn btn">Отправить</button>
+                </fieldset>
+            </form>
+        </div>
+    </div>
     <div class="wrapper">
         <section class="banner">
             <div class="banner__inner">
