--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
             </ul>
         </div>
     </header>
-    <div class="modal">
+    <div class="modal hidden">
         <div class="modal__window">
             <form class="modal__form">
                 <header class="modal__header">
@@ -69,9 +69,9 @@
                     <div class="modal__close">&#10006;</div>
                 </header>
                 <fieldset class="modal__fieldset">
-                    <input class="modal__input" type="text" placeholder="Ваше имя" minlength="2">
-                    <input class="modal__input" type="tel" placeholder="Ваш номер телефона" minlength="5">
-                    <button class="modal__btn btn">Отправить</button>
+                    <input class="modal__input" type="text" placeholder="Ваше имя" minlength="2" required>
+                    <input class="modal__input" type="tel" placeholder="Ваш номер телефона" minlength="5" pattern="^\+?\d+$" required>
+                    <button class="modal__btn btn" type="submit">Отправить</button>
                 </fieldset>
             </form>
         </div>
